# efatura-mcp-server

./: .env.example  .gitattributes  .gitignore  LICENSE  README.md  SECURITY.md  pyproject.toml
src/efatura_mcp/: __init__.py  gib_earsiv_client.py  mock_data.py  server.py
tests/: __init__.py  test_real_integration.py  test_server.py
